Revision history for {{$dist->name}}

{{$NEXT}}

1.0.13 2011-07-17T01:06:15Z
 [Bugs]
 - Fixed an issue where the change of Dzil's Autoprereqs 'skip' parameter
   started taking an array instead, by using an array. ( External interface
   is still the same though )

 [Dependencies]
 - Dist::Zilla 4.200011 is now the minimum requirement, as that has the
   adjusted Autoprereqs

 [Packaging]
 - Web metadata now uses HTTPS:// urls.

1.0.12 2011-07-12T09:57:41Z
 [Dependencies::Tests]
 - Version explicit dependency added to Test::File::ShareDir 0.3.0 which is
   required for -root to be optional.

1.0.11 2011-07-11T04:56:38Z
 [Tests]
 - Redo the git hack using ENV flags instead of a config file as it still
   doesn't work as intended. Need both AUTHOR and CONFIG env variables.
 - Minting test now more detailed with arbitrary pass indicators to
   indicate where fails occur.

1.0.10 2011-07-11T03:41:19Z
 [Packaging]
 - Retroactive Changes normalization

 [Tests]
 - Change git behaviour in the Minter test so git environment is always
   sane-ish and doesn't report weirdness.

1.0.9 2011-06-13T23:50:29Z
 [Dependencies::Test::New]
 - Capture::Tiny
 - File::pushd
 - FindBin
 - Path::Class
 - Test::DZil
 - Test::Fatal
 - Test::File::ShareDir
 - Test::Output

 [Features]
 - Comments out autoversion_relative fields in generated dist.ini as a move
   towards eliminating it.
 - Pre-Injects Abstract and Moose to new Modules.
 - Sets a custom template provider in the profile.

 [MiscFiles::New]
 - share/profiles/default/ModuleTemplate.pm, template for my modules.
 - corpus/global/config.ini,  a default "Global" configuaration for test
   purposes.

 [Tests::New]
 - 01-Minter.t, A reasonably exhaustive mint > build > testbuild domino
   test.

1.0.8 2011-06-12T22:41:51Z
 [Features]
 - No longer warns about unspecified Autoversion::Relative params when
   using Git::NextVersion

1.0.7 2011-04-24T13:45:19Z
 [Dependencies]